Version history for MooseX::Method::Signatures

0.41  Sun Mar 11 10:05:27 PDT 2012
  * Add explicit dependency on Eval::Closure, in an effort to get more
    diagnostics from failing cpantesters reports.  No functionality changes.

0.40  Sat Mar 10 09:03:51 PST 2012
  * Loosen a regexp in a test, to handle the new format emitted by Carp 1.25.

0.39  Sat Mar 10 00:54:18 GMT 2012
  * The test suite now uses Test::Fatal instead of Test::Exception (Karen
    Etheridge).
  * Bump dependency on MooseX::Types::Structured to 0.24, which contains
    more detailed error messages as well as some performance enhancements.

0.38  Fri Mar  9 23:43:07 GMT 2012
  * Require B::Hooks::EndOfScope 0.10 and Module::Runtime 0.012, fixing various
    perl 5.8 breakages.

0.37  Mon, 12 Sep 2011 10:35:29 +0100
  * Don't look in the stash for traits or types that contain :: (Jesse Luehrs).

0.36  Tue, 31 Aug 2010 23:36:19 +0200
  * Avoid deprecation warnings from new Moose version by depending on
    MooseX::LazyRequire 0.06 (Jeremy Carman).

0.35  Mon, 19 Jul 2010 05:50:08 +0200
  * Updated to avoid warnings from Moose 1.09 (Dave Rolsky).
  * Switch from Module::Install to Dist::Zilla.

0.34  Tue, 08 Jun 2010 14:00:00 -0300
  * Provides a version of reify that replaces the original version and
    now finally CatalystX::Declare and MooseX::MultiMethods work.

0.33  Thu, 01 Jun 2010 13:47:34 -0300
  * CatalystX::Declare seems to create a method object without a code
    reference at all.

0.32  Thu, 01 Jun 2010 13:47:34 -0300
  * Detect usage of old MXMS::Meta::Method API and retro-compatibilize.

0.31  Thu, 01 Jun 2010 13:47:34 -0300
  * Add support for "does" as a trait declarator
  * Compatibilize MXMS::Meta::Method signature with Class::MOP::Method
    so other traits can apply customizations to the actual body of the
    method.

0.30  Thu, 04 Feb 2010 02:41:36 +0100
  * Make Any instead of Defined the default type constraint.